# hdtSMP64

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  validate-config.yml
cmake/triplets/: _pin_toolset.cmake  x64-windows-static-md-avx.cmake  x64-windows-static-md-avx2.cmake  x64-windows-static-md-avx512.cmake  x64-windows-static-md.cmake
configs/: FSMP.dds  configs.json  configs.xml
configs/configsPresets/: Debug.json  Default.json  Performance.json  Quality.json  Reasonable.json
configs/fonts/: FSMPMono.LICENSE.txt
configs/localization/: de_at.json  de_de.json  en.json  es_es.json  fr_fr.json  it_it.json  ja_jp.json  pl_pl.json  pt_br.json  pt_pt.json  ru_ru.json  zh_cn.json
fomod tree/: DearImGuiLicense.txt  DynamicHDTOriginalWorkLicense.txt  Readme.txt  SKSEMenuFrameworkLicense.txt
fomod tree/Scripts/: DynamicHDT.pex
fomod tree/Source/scripts/: DynamicHDT.psc
fomod tree/fomod/: ModuleConfig.xml  info.xml
hdtSMP64/: ActorManager.cpp  ActorManager.h  config.cpp
src/: ActorManager.cpp  ActorManager.h  CMakeLists.txt  DynamicHDT.cpp  GlobalConfig.cpp  GlobalConfig.h  Hooks.cpp  Hooks.h  Main.h  NetImmerseUtils.h  PCH.h  PluginAPI.h  PluginInterfaceImpl.cpp  PluginInterfaceImpl.h  SMPDebug.h  XmlReader.cpp  config.cpp  config.h  dhdtPapyrusFunctions.cpp  dhdtPapyrusFunctions.h  hdtDefaultBBP.cpp  hdtForceUpdateList.cpp  hdtForceUpdateList.h  hdtPhysicsProfiler.cpp  hdtPhysicsProfiler.h  hdtSkyrimBone.cpp  hdtSkyrimBone.h  hdtSkyrimPhysicsWorld.cpp  hdtSkyrimPhysicsWorld.h  hdtSkyrimSystem.cpp  hdtSkyrimSystem.h  hdtStringUtils.h  main.cpp
src/Patterns/: hdtPatternLibrary.cpp  hdtPatternLibrary.h  hdtXmlPatternExpander.cpp  hdtXmlPatternExpander.h
src/UI/: FSMPMenu.cpp  FSMPMenu.h  Localization.cpp  Localization.h
src/Validator/: hdtAssetValidator.cpp  hdtAssetValidator.h
src/Validator/Config/: hdtValidatorPaths.h
src/Validator/Improvers/: hdtNIFBinaryIO.cpp  hdtNIFBinaryIO.h  hdtNIFOrphanedSkinImprover.cpp  hdtNIFOrphanedSkinImprover.h  hdtNIFSkinMeshValidator.cpp  hdtNIFSkinMeshValidator.h
src/Validator/Parser/: hdtNIFBinaryParser.cpp  hdtNIFBinaryParser.h  hdtSCHSchemaParser.cpp  hdtSCHSchemaParser.h  hdtXSDSchemaParser.cpp  hdtXSDSchemaParser.h
src/Validator/Schema/: hdtNifSchema.cpp  hdtNifSchema.h  hdtSCHSchemaModel.h  hdtXSDSchemaModel.h
src/Validator/Utils/: hdtConcurrencyUtils.h  hdtNIFBinaryUtils.h  hdtNiflyShapeAudit.cpp  hdtNiflyShapeAudit.h  hdtPhysicsXmlSource.h  hdtStringUtils.h  hdtTemplateDefaults.cpp  hdtTemplateDefaults.h  hdtTimeUtils.h  hdtValidatorFamily.h  hdtXMLUtils.h
src/Validator/Validators/: hdtNIFBoneRefValidator.cpp  hdtNIFBoneRefValidator.h  hdtNIFPhysicsXMLExtractor.cpp  hdtNIFStructureValidator.cpp  hdtNIFValidator.h  hdtSCHValidator.cpp  hdtSCHValidator.h  hdtXSDValidator.cpp  hdtXSDValidator.h
src/hdtSkinnedMesh/: hdtBulletHelper.h  hdtCollider.cpp  hdtCollider.h  hdtDispatcher.cpp  hdtDispatcher.h  hdtSkinnedMeshAlgorithm.cpp  hdtSkinnedMeshAlgorithm.h  hdtSkinnedMeshBody.cpp  hdtSkinnedMeshBone.h  hdtSkinnedMeshShape.cpp  hdtSkinnedMeshShape.h  hdtSkinnedMeshSystem.cpp  hdtSkinnedMeshSystem.h  hdtSkinnedMeshWorld.cpp  hdtSkinnedMeshWorld.h
tests/config/: CMakeLists.txt  main.cpp  test_globalconfig.cpp
tests/patterns/: CMakeLists.txt  main.cpp  test_expander.cpp  test_library.cpp
tests/validator/: CMakeLists.txt  main.cpp  test_inert_bones.cpp  test_pch.h  test_xmlreader.cpp
